block yazmıştım onu düzeltim

--- a/home.html
+++ b/home.html
@@ -64,10 +64,10 @@
         class="content d-flex flex-column align-items-center g-5"
         id="header"
       >
-        <h1 class="display-4 fw-bold mb-2">Awesome Block</h1>
+        <h1 class="display-4 fw-bold mb-2">Awesome Blog</h1>
         <div class="col-lg-6">
           <p class="lead mb-5 text-center">
-            This is an awesome block of content. It can be used to display
+            This is an awesome blog of content. It can be used to display
             important information or announcements. You can customize it to fit
             your needs. Feel free to add more text or images as needed.
           </p>
@@ -98,10 +98,10 @@
         class="content d-flex flex-column align-items-center g-5"
         id="header"
       >
-        <h1 class="fw-normal my-3">Awesome Block</h1>
+        <h1 class="fw-normal my-3">Awesome Blog</h1>
         <div class="col-lg-8">
           <p class="lead my-auto text-center py-3">
-            This is an awesome block of content. It can be used to display
+            This is an awesome blog of content. It can be used to display
             important information or announcements. You can customize it to fit
             your needs. Feel free to add more text or images as needed.
           </p>
